# APICL.Shared/Models/Image/ImageObjInfo.cs
@@ -26,6 +26,8 @@ namespace APICL.Shared
         public TimeSpan LastLoadingTimeSpan = TimeSpan.Zero;
         public string LastLoadingTime { get; set; } = string.Empty;
 
+        public string ErrorInfo { get; set; } = string.Empty;
+
 
 
 		public ImageObjInfo()
